# GA4GH_pedigree_api

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
.github/workflows/: docs.yml  main.yml
docs/: ci.rst  conf.py  development.rst  index.rst
my_pkg/: __init__.py
